Updated to feature complete state for Nevada/NetBeans3.5

--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -9,10 +9,16 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
 # Microsystems, Inc. All Rights Reserved.
 
+#
+# This Bundle is for JUnit module
+#
+
 LBL_Action=Create Test
 # Actions API
 LBL_Action_RunTest=Execute Test
 LBL_Action_CreateTest=Create Tests
+MSG_StatusBar_CreateTests_Finished=Tests created.
+MSG_StatusBar_CreateTests_Cancelled=Tests generation cancelled.
 # Actions API
 LBL_Action=<name for action>
 # To include a mnemomic for the Main Window menus, use e.g.:
@@ -73,7 +79,7 @@ JUnitCfgOfCreate.chkPackage.text=\ Package Methods
 JUnitCfgOfCreate.chkPackage.mne=K
 JUnitCfgOfCreate.chkComments.text=\ Comments
 JUnitCfgOfCreate.chkComments.mne=C
-JUnitCfgOfCreate.chkContent.text=\ Dummy Content
+JUnitCfgOfCreate.chkContent.text=\ Default Bodies
 JUnitCfgOfCreate.chkContent.mne=N
 JUnitCfgOfCreate.chkJavaDoc.text=\ JavaDoc
 JUnitCfgOfCreate.chkJavaDoc.mne=D
@@ -94,7 +100,7 @@ LBL_progress_executing=Executing tests ...
 LBL_progress_compiling=Compiling test ...
 LBL_generator_status_ignoring=Ignoring:
 HINT_generate_exception_classes=Generate Tests for Exception Classes
-PROP_generate_exception_classes=Generate Tests for Exception Classes
+PROP_generate_exception_classes=Include Exception Classes
 LBL_Action_OpenTest=Open Test
 # Execution API
 MSG_format_hint=<hints on how to use executor...>\n{myOptionVal} - use my option
@@ -127,12 +133,15 @@ HINT_junit_runner=Test runner
 HINT_executor=This executor executes classes, that implement Test interface
 MSG_create_test_first=You have to create test classes first, before you can execute them.
 MSG_file_from_node_failed=File can't be found for selected node.
-MSG_test_file_not_found=Test file was not found.
+MSG_test_file_not_found=Test/Suite file for this class/package was not found.
 MSG_execution_failed=Test execution has failed.
-PROP_generate_abstract_impl=Generate Tests for Abstract Classes
+PROP_generate_abstract_impl=Include Abstract Classes
 HINT_generate_abstract_impl=Generate Tests for Abstract Classes
 JUnitCfgOfCreate.chkAbstractImpl.text=\ Include Abstract Classes
 JUnitCfgOfCreate.chkAbstractImpl.mne=A
+
+
+
 
 # Regenerate suite method
 JUnitCfgOfCreate.chkRegenerateSuite.text=\ Regenerate Suite Method
@@ -140,8 +149,49 @@ JUnitCfgOfCreate.chkRegenerateSuite.mne=G
 PROP_regenerate_suite_method=Regenerate Suite Method
 HINT_regenerate_suite_method=Regenerate Suite Method
 
+# Include Package Private Classes
+PROP_include_package_private_classes=Include Package Private Classes
+HINT_include_package_private_classes=Generate Tests for Private Classes
+JUnitCfgOfCreate.chkPackagePrivateClasses.text=\ Include Package Private Classes
+JUnitCfgOfCreate.chkPackagePrivateClasses.mne=G
 
+# Generate main method
+PROP_generate_main_method=Generate main Method
+HINT_generate_main_method=Generate main Method
+PROP_generate_main_method_body=Body of the main method
+HINT_generate_main_method_body=Body of the main method
+PROP_generate_main_method_body_default_value=junit.textui.TestRunner.run(suite());
+
+# Generate tests from test classes
+PROP_generate_test_from_test_classes=Generate Tests for Test Classes
+HINT_generate_test_from_test_classes=Generate Tests for Test Classes
+
+# Test classname prefix/suffix
+PROP_test_classname_prefix=Prefix for Generated Test Classes
+HINT_test_classname_prefix=Prefix for Generated Test Classes
+PROP_test_classname_prefix_default_value=
+
+PROP_test_classname_suffix=Suffix for Generated Test Classes
+HINT_test_classname_suffix=Suffix for Generated Test Classes
+PROP_test_classname_suffix_default_value=Test
+
+# Test Suites prefix/suffix/rootPackageName
+PROP_suite_classname_prefix=Prefix for Generated Suite Classes
+HINT_suite_classname_prefix=Prefix for Generated Suite Classes
+PROP_suite_classname_prefix_default_value=
+
+PROP_suite_classname_suffix=Suffix for Generated Suite Classes
+HINT_suite_classname_suffix=Suffix for Generated Suite Classes
+PROP_suite_classname_suffix_default_value=Suite
+
+PROP_root_suite_classname=Root Suite Class Name
+HINT_root_suite_classname=Root Suite Class Name
+PROP_root_suite_classname_default_value=RootSuite
+
+#
 # Layer stuff
+#
+
 # Help stuff
 Menu/Help/HelpShortcuts/org-netbeans-modules-junit-mainpage.xml=JUnit Module Help
 Actions/Help/org-netbeans-modules-junit-mainpage.xml=JUnit Module Help
@@ -151,12 +201,9 @@ org-netbeans-modules-junit-JUnitSettings.settings=JUnit Module Settings
 
 # Templates stuff
 Templates/JUnit/SimpleJUnitTest.java=Simple JUnit TestCase
-Templates/JUnit/SimpleNbJUnitTest.java=Simple NbJUnit TestCase
 
 # Java doc stuff
 Mount/Javadoc/org-netbeans-modules-junit-junit-javadoc.xml=JUnit 3.8.1 Javadoc
-Mount/Javadoc/org-netbeans-modules-junit-nb-junit-javadoc.xml=NetBeans Extension to JUnit (NbJUnit) Javadoc
 
 # Java library stuff
 Mount/java/org-netbeans-modules-junit-junit-library.xml=JUnit 3.8.1
-Mount/java/org-netbeans-modules-junit-nbjunit-library.xml=NetBeans Extension to JUnit (NbJUnit)
