--- a/apisupport.ant/build.xml
+++ b/apisupport.ant/build.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?> <!-- -*- sgml-indent-step: 2 -*- -->
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
                 Sun Public License Notice
 
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 <project name="apisupport/ant" default="netbeans" basedir=".">
@@ -23,7 +23,7 @@ Microsystems, Inc. All Rights Reserved.
     <property name="nbm_alias" value="nb_ide"/>
 
     <target name="compile" description="Compile source files.">
-        <javac srcdir="../src" destdir="../src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
+        <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>
                 <pathelement location="../../ant/netbeans/modules/ant.jar"/>
                 <fileset dir="../../ant/external">
@@ -32,7 +32,6 @@ Microsystems, Inc. All Rights Reserved.
                 <pathelement location="../../openide/netbeans/lib/openide.jar"/>
                 <pathelement location="../../core/netbeans/lib/core.jar"/>
             </classpath>
-            <include name="org/netbeans/modules/apisupport/ant/"/>
         </javac>
     </target>
 
@@ -41,9 +40,7 @@ Microsystems, Inc. All Rights Reserved.
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
         <jar jarfile="netbeans/modules/eager/apisupport-ant.jar" manifest="manifest-subst.mf" compress="false">
-            <fileset dir="../src" excludesfile="../../nbbuild/standard-jar-excludes.txt">
-                <include name="org/netbeans/modules/apisupport/ant/"/>
-            </fileset>
+            <fileset dir="src" excludesfile="../../nbbuild/standard-jar-excludes.txt"/>
         </jar>
     </target>
 
@@ -62,16 +59,29 @@ Microsystems, Inc. All Rights Reserved.
         </makenbm>
     </target>
 
+    <target name="reload-build" depends="netbeans">
+        <mkdir dir="reload"/>
+        <copy file="netbeans/modules/eager/apisupport-ant.jar" tofile="reload/apisupport-ant.jar"/>
+    </target>
+
+    <target name="reload" depends="reload-build" description="Test changes to the module.">
+        <nbinstaller module="reload/apisupport-ant.jar" action="reinstall"/>
+    </target>
+
     <target name="clean" description="Clean out build products.">
         <delete>
-            <fileset dir="../src">
-                <include name="org/netbeans/modules/apisupport/ant/**/*.class"/>
+            <fileset dir="src">
+                <include name="**/*.class"/>
             </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
         <delete file="apisupport-ant.nbm"/>
         <delete dir="netbeans"/>
         <delete dir="Info"/>
+    </target>
+
+    <target name="real-clean" depends="clean" description="Clean all build products and also test modules.">
+        <delete dir="reload"/>
     </target>
 
 </project>
