--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -228,7 +228,7 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module apisupport/apidocs..."/>
     <ant dir="../apisupport/apidocs" target="netbeans"/>
   </target>
-  <target name="all-apisupport/lite" depends="all-openide,all-core,all-jarpackager,all-openide/deprecated,all-java/srcmodel,all-openide/execution">
+  <target name="all-apisupport/lite" depends="all-openide,all-core,all-jarpackager,all-java/srcmodel,all-openide/execution">
     <echo message="Building module apisupport lite..."/>
     <ant dir="../apisupport/lite" target="netbeans"/>
   </target>
