Removed dependency on openide-deprecated.jar, updated manifest

--- a/web.core/build.xml
+++ b/web.core/build.xml
@@ -78,7 +78,7 @@ Microsystems, Inc. All Rights Reserved.
         <pathelement location="${nb_root}/debuggercore/oldapi/netbeans/modules/autoload/openide-debugger.jar"/>
         <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar" />
         <pathelement location="${nb_root}/openide/netbeans/lib/openide.jar"/>
-        <pathelement location="${nb_root}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="${nb_root}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX: Needed for compilation ServletDO extends JDO that implements ElementCookie -->
         <pathelement location="${nb_root}/openide/compiler/netbeans/modules/autoload/openide-compiler.jar"/>
         <pathelement location="${nb_root}/openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
         <pathelement location="${nb_root}/openide/io/netbeans/modules/autoload/openide-io.jar"/>
