--- a/o.openidex.util/build.xml
+++ b/o.openidex.util/build.xml
@@ -30,7 +30,6 @@ Microsystems, Inc. All Rights Reserved.
       <classpath>
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
         <pathelement location="../openide/netbeans/lib/openide.jar"/>
-        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
         <fileset dir="../core/external">
           <include name="xml-apis*.jar" />
         </fileset>
@@ -51,11 +50,11 @@ Microsystems, Inc. All Rights Reserved.
     </locjar>
   </target>
 
-  <target name="netbeans" depends="jars">
+  <target name="netbeans" depends="jars" description="Build everything.">
     <genlist targetname="nbm" outputfiledir="netbeans"/>
   </target>
 
-  <target name="nbm" depends="netbeans">
+  <target name="nbm" depends="netbeans" description="Build NBM.">
     <makenbm file="openidex.nbm"
              topdir="."
              module="netbeans/modules/autoload/openidex.jar"
@@ -66,7 +65,7 @@ Microsystems, Inc. All Rights Reserved.
     </makenbm>
   </target>
 
-  <target name="clean">
+  <target name="clean" description="Clean everything.">
     <delete>
       <fileset dir="src">
         <include name="**/*.class"/>
