Bugfix 30940. Fixing the build order of monitor and tomcatint/bundledtomcat. tomcatint/bundledtomcat must be compiled before the monitor, because the monitor needs some Tomcat files to compile its own (Tomcat-specific) classes.

--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -407,7 +407,7 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module metrics..."/>
     <ant dir="../metrics" target="netbeans"/>
   </target>
-  <target name="all-monitor" depends="all-openide,all-web/core,all-schema2beans,all-html,all-httpserver,all-openide/deprecated">
+  <target name="all-monitor" depends="all-openide,all-web/core,all-schema2beans,all-html,all-httpserver,all-openide/deprecated,all-tomcatint/bundledtomcat">
     <echo message="Building module monitor..."/>
     <ant dir="../monitor" target="netbeans"/>
   </target>
