Annotating error when bad encoding is used for content reading (#30253). Tests updated to run again.

--- a/html/src/org/netbeans/modules/html/Bundle.properties
+++ b/html/src/org/netbeans/modules/html/Bundle.properties
@@ -23,3 +23,8 @@ LBL_htmlNodeShortDesc=HTML File
 
 # Filenames
 Templates/Other/html.html=HTML File
+
+# HtmlEditorSupport
+# {0} document name
+# {1} encoding
+MSG_errorInReadingWithEnc=The document {0} could not be loaded using encoding {0}.
