updated xtest server and its documentation

--- a/xtest/server/conf.samples/driver-nbdev-unit.properties
+++ b/xtest/server/conf.samples/driver-nbdev-unit.properties
@@ -10,6 +10,9 @@ xtest.testing.group=Development
 # which kind of tests are run
 xtest.tested.type=unit
 
+# which team tests this project
+xtest.testing.team=Core
+
 # Path to file/directory used for installing IDE
 ide.install.path=/space/builds/netbeans/dev/builds/last_NB.zip
 
