--- a/xtest/server/bin/build.xml
+++ b/xtest/server/bin/build.xml
@@ -25,8 +25,8 @@
    <target name="mail-errors" if="xtest.errors">
        <exec executable="sh" failonerror="true">
           <arg value="mail.sh"/>
-          <arg value="TR WARNING: Errors during testing"/>
-          <arg value="Host: ${xtest.machine}  Project: ${xtest.tested.project}  Problem: Tests finished with errors. This may be caused by problems in tests, but it can also be caused by problems in test infrastructure.  List of errors: ${xtest.errors}"/>
+          <arg value="TR WARNING: Some module(s) failed."/>
+          <arg value="Host: ${xtest.machine}${line.separator}Project: ${xtest.tested.project}${line.separator}Problem: Some module buildscript(s) failed${line.separator}${line.separator}This may be caused by problems in tests, but it can also be caused by problems in test infrastructure. Despite it results still should appear on web after some time. Open results for this project/build/machine and look at buildscript logs for details. They are located under link 'Logs from builds scripts'.${line.separator}${line.separator}Found errors:${line.separator}${xtest.errors}"/>
        </exec>
    </target>
 </project>
