bugfix #30821, beans module no longer depends on org.openide.deprecated

--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -240,7 +240,7 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module autoupdate..."/>
     <ant dir="../autoupdate" target="netbeans"/>
   </target>
-  <target name="all-beans" depends="all-openide,all-java,all-openide/deprecated,all-java/srcmodel">
+  <target name="all-beans" depends="all-openide,all-java,all-java/srcmodel">
     <echo message="Building module beans..."/>
     <ant dir="../beans" target="netbeans"/>
   </target>
