--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -353,7 +353,7 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building Java support APIs.."/>
     <ant dir="../java/api" target="netbeans"/>
   </target>
-  <target name="all-javadoc" depends="all-openide,all-java,all-openide/deprecated,all-java/srcmodel,all-openide/execution,all-openide/io">
+  <target name="all-javadoc" depends="all-openide,all-java,all-core/javahelp,all-java/srcmodel,all-openide/execution,all-openide/io">
     <echo message="Building module javadoc..."/>
     <ant dir="../javadoc" target="netbeans"/>
   </target>
