Fixing a minor bug in code completion.
When completing the 'property' attribute in the 'jsp:getProperty' or 'jsp:getProperty' standard tag, completion of available bean properties did not work.

Now it works again.

--- a/web.core.syntax/build.xml
+++ b/web.core.syntax/build.xml
@@ -33,6 +33,7 @@ Microsystems, Inc. All Rights Reserved.
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <classpath>
         <pathelement location="${nb_root}/openide/openide-13javac-workaround.jar"/>
+        <pathelement location="${nb_root}/openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
         <pathelement location="${nb_root}/editor/netbeans/modules/ext/nb-editor.jar"/>
         <pathelement location="${nb_root}/editor/netbeans/modules/editor.jar"/>
         <pathelement location="${nb_root}/xml/text-edit/netbeans/modules/xml-text-edit.jar"/>
