#28768: i18n-ing EnumEditor name.

--- a/form/src/org/netbeans/modules/form/editors/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/editors/Bundle.properties
@@ -29,3 +29,6 @@ ACSD_CtrlKey=N/A
 ACSD_AltKey=N/A
 ACSD_ShiftKey=N/A
 ACSD_KeyStrokeCustomEditor=N/A
+
+# EnumEditor
+CTL_EnumEditorName=Enumeration
