--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -381,7 +381,7 @@ FMT_MSG_AddToOthers=Add {0} to Other Components.
 # {0} = current designer width
 # {1} = current designer height
 FMT_HINT_DesignerResizing=[{0}, {1}] To change the designer size, drag or doubleclick the border.
-CTL_SetDesignerSize_Title=Set Form Desiger Size
+CTL_SetDesignerSize_Title=Set Form Designer Size
 CTL_SetDesignerSize_Label=&New Size (width, height):
 
 # Events
