--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -17,8 +17,11 @@ LBL_Action=Create Test
 # Actions API
 LBL_Action_RunTest=Execute Test
 LBL_Action_CreateTest=Create Tests
+MSG_StatusBar_CreateTest_Begin=Creating tests ...
 MSG_StatusBar_CreateTests_Finished=Tests created.
 MSG_StatusBar_CreateTests_Cancelled=Tests generation cancelled.
+MSG_StatusBar_ExecuteTests_Finished=Test execution finished.
+MSG_StatusBar_ExecuteTests_Cancelled=Test execution cancelled.
 # Actions API
 LBL_Action=<name for action>
 # To include a mnemomic for the Main Window menus, use e.g.:
@@ -122,6 +125,7 @@ JUnitProgress.lblMessage.text=Working ...
 LBL_generator_status_creating=Creating: 
 LBL_generator_status_scanning=Scanning: 
 LBL_generator_progress_title=Unit tests generation in progress ...
+LBL_execute_progress_title=Unit tests execution in progress ...
 PROP_cfgcreate_enabled=Show Test Create Configuration
 HINT_cfgcreate_enabled=Show Test Create Configuration
 PROP_cfgexec_enabled=Show Test Execute Configurtaion
@@ -205,5 +209,8 @@ Templates/JUnit/SimpleJUnitTest.java=Simple JUnit TestCase
 # Java doc stuff
 Mount/Javadoc/org-netbeans-modules-junit-junit-javadoc.xml=JUnit 3.8.1 Javadoc
 
-# Java library stuff
+# JUnit library stuff
 Mount/java/org-netbeans-modules-junit-junit-library.xml=JUnit 3.8.1
+
+# JUnit test runner stuff
+Mount/java/org-netbeans-modules-junit-junit-testrunner.xml=JUnit Test Runner
