IZ=26330 Wrong message about HTTP server

--- a/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
+++ b/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
@@ -385,10 +385,8 @@ MON_ParamEditor_Input_required=Input missing
 # 
 # No server dialog
 #
-MON_NoServer=The HTTP monitor requires that an implementation of the
-internal HTTP server is available and running in order to receive data from the execution web server.  
-MON_CantReplay=The HTTP monitor requires that an implementation of the
-internal HTTP server is available and running in order to replay requests.
+MON_NoServer=The HTTP monitor requires that an implementation of the internal HTTP server is available and running in order to receive data from the execution web server.  
+MON_CantReplay=The HTTP monitor requires that an implementation of the internal HTTP server is available and running in order to replay requests.
 MON_NoServerTitle=Internal HTTP server not running
 
 #NOI18N
