several more fixes (27272, 30652, 31068, 31150)

--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -48,62 +48,32 @@ LBL_Action=<name for action>
 LBL_true=True
 LBL_false=False
 LBL_junit_settings=JUnit Module Settings
-PROP_file_system=Target File System for Tests
-HINT_file_system=Target File System for Tests
-PROP_suite_template=Suite Class Template
-HINT_suite_template=Suite Class Template
-PROP_class_template=Test Class Template
-HINT_class_template=Test Class Remplate
-PROP_members_public=Generate Tests for Public Member Methods
-HINT_members_public=Generate Tests for Public Member Methods
-PROP_members_protected=Generate Tests for Protected Member Methods
-HINT_members_protected=Generate Tests for Protected Member Methods
-PROP_members_package=Generate Tests for Package Member Methods
-HINT_members_package=Generate Tests for Package Member Methods
-PROP_body_comments=Generate Comments in Test Method Bodies
-HINT_body_comments=Generate Comments
-PROP_body_content=Generate Default Bodies of Test Methods
-HINT_body_content=Generate Default Bodies of Test Methods
-PROP_javadoc=Generate JavaDoc Comments
-HINT_javadoc=Generate JavaDoc Comments
-JUnitCfgOfCreate.lblFileSystem.text=File System:
-JUnitCfgOfCreate.lblFileSystem.mne=F
-JUnitCfgOfCreate.cmdMount.text=Mount
-JUnitCfgOfCreate.cmdMount.mne=M
-JUnitCfgOfCreate.lblSuiteClass.text=Suite Class:
-JUnitCfgOfCreate.lblSuiteClass.mne=U
-JUnitCfgOfCreate.lblTestClass.text=Test Class:
-JUnitCfgOfCreate.lblTestClass.mne=T
-JUnitCfgOfCreate.chkPublic.text=\ Public Methods
-JUnitCfgOfCreate.chkPublic.mne=P
-JUnitCfgOfCreate.chkProtected.text=\ Protected Methods
-JUnitCfgOfCreate.chkProtected.mne=R
-JUnitCfgOfCreate.chkPackage.text=\ Package Methods
-JUnitCfgOfCreate.chkPackage.mne=K
-JUnitCfgOfCreate.chkComments.text=\ Comments
-JUnitCfgOfCreate.chkComments.mne=C
-JUnitCfgOfCreate.chkContent.text=\ Default Bodies
-JUnitCfgOfCreate.chkContent.mne=N
-JUnitCfgOfCreate.chkJavaDoc.text=\ JavaDoc
-JUnitCfgOfCreate.chkJavaDoc.mne=D
-JUnitCfgOfCreate.jpTemplates.title=\ Templates\ 
-JUnitCfgOfCreate.jpCodeGen.title=\ Code Generation\ 
-LBL_JUnitCfgOfCreate_Title=Create Tests
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 LBL_New_FS_Dialog_Title=Mount File System
 MSG_file_system_not_found=Target file system was not found among mounted file systems.
-JUnitCfgOfCreate.chkEnabled.text=\ Show Create Tests Configuration Dialog
-JUnitCfgOfCreate.chkEnabled.mne=W
+
 LBL_no_file_system_selected=(no file system selected)
 HINT_test_runner=Test Runner Class
 PROP_test_runner=Test Runner Class
-JUnitCfgOfCreate.chkExceptions.text=\ Include Exception Classes
-JUnitCfgOfCreate.chkExceptions.mne=E
+
 MSG_compilation_failed=Test compilation has failed.
 LBL_progress_executing=Executing tests ...
 LBL_progress_compiling=Compiling test ...
 LBL_generator_status_ignoring=Ignoring:
-HINT_generate_exception_classes=Generate Tests for Exception Classes
-PROP_generate_exception_classes=Include Exception Classes
+
 LBL_Action_OpenTest=Open Test
 # Execution API
 MSG_format_hint=<hints on how to use executor...>\n{myOptionVal} - use my option
@@ -137,27 +107,138 @@ HINT_junit_runner=Test runner
 HINT_executor=This executor executes classes, that implement Test interface
 MSG_create_test_first=You have to create test classes first, before you can execute them.
 MSG_file_from_node_failed=File can't be found for selected node.
-MSG_test_file_not_found=Test/Suite file for this class/package was not found.
+MSG_test_class_not_found=Test class "{0}" for class "{1}" was not found.
+MSG_testsuite_class_not_found=Suite class "{0}" for package "{1}" was not found.
+MSG_testsuite_class_for_root_package_not_found=Suite class "{0}" for root package was not found.
 MSG_execution_failed=Test execution has failed.
-PROP_generate_abstract_impl=Include Abstract Classes
-HINT_generate_abstract_impl=Generate Tests for Abstract Classes
+
+
+# Create tests window
+JUnitCfgOfCreate.Title=Create Tests
+JUnitCfgOfCreate.AD=Create Tests
+
+
+# Filesystem
+JUnitCfgOfCreate.lblFileSystem.text=File System:
+JUnitCfgOfCreate.lblFileSystem.mne=F
+JUnitCfgOfCreate.cboFileSystem.AD=Target file system for tests.
+JUnitCfgOfCreate.cboFileSystem.AN=Target file system for tests.
+PROP_file_system=Target File System for Tests
+HINT_file_system=Target File System for Tests
+
+# group templates
+JUnitCfgOfCreate.jpTemplates.title=\ Templates\ 
+
+# Suite class template
+JUnitCfgOfCreate.lblSuiteClass.text=Suite Class Template:
+JUnitCfgOfCreate.lblSuiteClass.mne=S
+JUnitCfgOfCreate.cboSuiteClass.AD=Suite class template.
+JUnitCfgOfCreate.cboSuiteClass.AN=Suite class template.
+PROP_suite_template=Suite Class Template
+HINT_suite_template=Suite Class Template
+
+# Test class template
+JUnitCfgOfCreate.lblTestClass.text=Test Class:
+JUnitCfgOfCreate.lblTestClass.mne=T
+JUnitCfgOfCreate.cboTestClass.AD=Test class template.
+JUnitCfgOfCreate.cboTestClass.AN=Test class template.
+PROP_class_template=Test Class Template
+HINT_class_template=Test Class Template
+
+# Generate options
+JUnitCfgOfCreate.jpCodeGen.title=\ Code Generation\ 
+
+# Generate tests for public methods
+JUnitCfgOfCreate.chkPublic.text=\ Public Methods
+JUnitCfgOfCreate.chkPublic.mne=P
+JUnitCfgOfCreate.chkPublic.toolTip=Generate tests for public member methods.
+JUnitCfgOfCreate.chkPublic.AD=Generate tests for public member methods.
+PROP_members_public=Generate Tests for Public Member Methods
+HINT_members_public=Generate Tests for Public Member Methods
+
+# Generate tests for protected methods
+JUnitCfgOfCreate.chkProtected.text=\ Protected Methods
+JUnitCfgOfCreate.chkProtected.mne=O
+JUnitCfgOfCreate.chkProtected.toolTip=Generate tests for protected member methods.
+JUnitCfgOfCreate.chkProtected.AD=Generate tests for protected member methods.
+PROP_members_protected=Generate Tests for Protected Member Methods
+HINT_members_protected=Generate Tests for Protected Member Methods
+
+
+# Generate tests for package private methods
+JUnitCfgOfCreate.chkPackage.text=\ Package Methods
+JUnitCfgOfCreate.chkPackage.mne=K
+JUnitCfgOfCreate.chkPackage.toolTip=Generate tests for default member methods.
+JUnitCfgOfCreate.chkPackage.AD=Generate tests for default member methods.
+PROP_members_package=Generate Tests for Default Member Methods
+HINT_members_package=Generate Tests for Default Member Methods
+
+
+# Generate Comments
+JUnitCfgOfCreate.chkComments.text=\ Comments
+JUnitCfgOfCreate.chkComments.mne=C
+JUnitCfgOfCreate.chkComments.toolTip=Generate comments in test method bodies.
+JUnitCfgOfCreate.chkComments.AD=Generate comments in test method bodies.
+PROP_body_comments=Generate Comments in Test Method Bodies
+HINT_body_comments=Generate Comments
+
+# Generate default bodies
+JUnitCfgOfCreate.chkContent.text=\ Default Bodies
+JUnitCfgOfCreate.chkContent.mne=B
+JUnitCfgOfCreate.chkContent.toolTip=Generate default bodies of test methods.
+JUnitCfgOfCreate.chkContent.AD=Generate default bodies of test methods.
+PROP_body_content=Generate Default Bodies of Test Methods
+HINT_body_content=Generate Default Bodies of Test Methods
+
+# Generate JavaDoc
+JUnitCfgOfCreate.chkJavaDoc.text=\ JavaDoc
+JUnitCfgOfCreate.chkJavaDoc.mne=D
+JUnitCfgOfCreate.chkJavaDoc.toolTip=Generate JavaDoc comments.
+JUnitCfgOfCreate.chkJavaDoc.AD=Generate JavaDoc comments.
+PROP_javadoc=Generate JavaDoc Comments
+HINT_javadoc=Generate JavaDoc Comments
+
+
+# Include abstract classes
 JUnitCfgOfCreate.chkAbstractImpl.text=\ Include Abstract Classes
 JUnitCfgOfCreate.chkAbstractImpl.mne=A
+JUnitCfgOfCreate.chkAbstractImpl.toolTip=Generate tests for abstract classes.
+JUnitCfgOfCreate.chkAbstractImpl.AD=Include abstract classes.
+PROP_generate_abstract_impl=Include Abstract Classes
+HINT_generate_abstract_impl=Generate Tests for Abstract Classes
 
+# Include exceptions
+JUnitCfgOfCreate.chkExceptions.text=\ Include Exception Classes
+JUnitCfgOfCreate.chkExceptions.mne=E
+JUnitCfgOfCreate.chkExceptions.toolTip=Generate tests for exception classes.
+JUnitCfgOfCreate.chkExceptions.AD=Include exception classes.
+HINT_generate_exception_classes=Generate Tests for Exception Classes
+PROP_generate_exception_classes=Include Exception Classes
 
+# Include Package Private Classes
+JUnitCfgOfCreate.chkPackagePrivateClasses.text=\ Include Package Private Classes
+JUnitCfgOfCreate.chkPackagePrivateClasses.mne=G
+JUnitCfgOfCreate.chkPackagePrivateClasses.toolTip=Generate tests for package private classes.
+JUnitCfgOfCreate.chkPackagePrivateClasses.AD=Include package private classes.
+PROP_include_package_private_classes=Include Package Private Classes
+HINT_include_package_private_classes=Generate Tests for Package Private Classes
 
 
 # Regenerate suite method
 JUnitCfgOfCreate.chkRegenerateSuite.text=\ Regenerate Suite Method
-JUnitCfgOfCreate.chkRegenerateSuite.mne=G
+JUnitCfgOfCreate.chkRegenerateSuite.mne=R
+JUnitCfgOfCreate.chkRegenerateSuite.toolTip=Regenerate suite method.
+JUnitCfgOfCreate.chkRegenerateSuite.AD=Regenerate suite method.
 PROP_regenerate_suite_method=Regenerate Suite Method
 HINT_regenerate_suite_method=Regenerate Suite Method
 
-# Include Package Private Classes
-PROP_include_package_private_classes=Include Package Private Classes
-HINT_include_package_private_classes=Generate Tests for Private Classes
-JUnitCfgOfCreate.chkPackagePrivateClasses.text=\ Include Package Private Classes
-JUnitCfgOfCreate.chkPackagePrivateClasses.mne=G
+
+# show test configuration dialog
+JUnitCfgOfCreate.chkEnabled.text=\ Show Create Tests Configuration Dialog
+JUnitCfgOfCreate.chkEnabled.mne=W
+JUnitCfgOfCreate.chkEnabled.toolTip=Show this dialog next time when tests will be created.
+JUnitCfgOfCreate.chkEnabled.AD=Show Create Tests Configuration Dialog
+
 
 # Generate main method
 PROP_generate_main_method=Generate main Method
@@ -214,3 +295,12 @@ Mount/java/org-netbeans-modules-junit-junit-library.xml=JUnit 3.8.1
 
 # JUnit test runner stuff
 Mount/java/org-netbeans-modules-junit-junit-testrunner.xml=JUnit Test Runner
+
+
+#
+# No longer used labels (though they may be used in the future again)
+#
+
+# Mount button
+JUnitCfgOfCreate.cmdMount.text=Mount
+JUnitCfgOfCreate.cmdMount.mne=M
