--- a/o.n.core/src/org/netbeans/beaninfo/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/Bundle.properties
@@ -11,12 +11,12 @@
 
 # Local
 PROP_rootDirectory=Root Directory
-HINT_rootDirectory=The root directory of this file system (should be the top of the package hierarchy).
+HINT_rootDirectory=The root directory of this filesystem (should be the top of the package hierarchy).
 HINT_localFileSystem=Local Filesystem
 
 # JAR
 PROP_archiveFile=Archive File
-HINT_archiveFile=The archive file this file system represents.
+HINT_archiveFile=The archive file this filesystem represents.
 LAB_JarFileFilter=Archive Files (*.jar, *.zip, *.war, *.ear)
 HINT_jarFileSystem=JAR Filesystem
 
@@ -83,7 +83,7 @@ PROP_backupExtensions=Files to Back Up by Extension
 HINT_backupExtensions=Extensions of files that should be backed up when modified.
 PROP_ignoredFiles=Ignored Files
 HINT_ignoredFiles=Regular expression of files to ignore. Match whole name, no path. Blank for none.
-PROP_systemName=System name of the file system
+PROP_systemName=System Name of the Filesystem
 HINT_systemName=Should uniquely identify the file system, as it will be used during serialization of its files. 
 
 # LoaderActionsPanel
