Fix of #30967 - Debugger does return 'null' for servlet breakpoint lines.

--- a/web.core/src/org/netbeans/modules/web/core/jsploader/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/jsploader/Bundle.properties
@@ -108,3 +108,7 @@ LAB_EditorToolTip_Valid={0} [{2}] in {3}
 
 #JspCompileUtil
 EXC_JspParserNotInstalled=The JSP parser module is not installed
+
+PROP_DSCB_debugsource=Stop in debugger
+
+HINT_DSCB_debugsource=Stop in debugger
