--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -102,6 +102,7 @@ CTL_JPDADebuggerTypeName=JPDA Debugging
 
 #JPDADebuggerModule
 CTL_Action_on_TI_find=Stop at the first line with source
+CTL_Action_on_TI_find_mnemonic=e
 
 #ExceptionBreakpoint
 CTL_Exception_event_name_type_name=Exception
