23819: I18N - mnemonic key doesn't work with translated

--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -61,6 +61,7 @@ CTL_Reconnecting_to_socket=Reconnecting to {0}:{1}
 CTL_Reconnecting_to=Reconnecting
 CTL_No_Connector=No connector found
 CTL_Connector=Connector:
+CTL_Connector_mnemonic=C
 CTL_Transport=Transport:
 CTL_Transport_Mnemonic=T
 CTL_Stop_On_Main_print_text=Thread {threadName} stopped at {className}.{methodName} line {lineNumber}.
@@ -319,16 +320,12 @@ MSG_Redefined_classes=The following classes were fixed:
 MSG_No_class_redefined=No class was fixed because none of classes to be fixed was loaded in the remote VM.
 
 #in the "Attach" dialog
-CTL_Host=Host:
-
-#in the "Attach" dialog
-CTL_Host_mnemonic=o
-
-#in the "Attach" dialog
-CTL_Port=Port:
-
-#in the "Attach" dialog
-CTL_Port_mnemonic=P
+    CTL_Host=Host:
+    CTL_Host_mnemonic=o
+    CTL_Port=Port:
+    CTL_Port_mnemonic=P
+    CTL_Name=Name:
+    CTL_Name_mnemonic=N
 
 #JPDAThread
 CTL_Thread_state_unknown=Unknown
