--- a/xml.schema/build.xml
+++ b/xml.schema/build.xml
@@ -50,9 +50,7 @@ Microsystems, Inc. All Rights Reserved.
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>        
                 <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
-                <fileset dir="${nbroot}/openide/netbeans/lib">
-                    <include name="openide*.jar"/>
-                </fileset>
+                <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
                 <pathelement location="${api_root}/src/"/>
                 <pathelement location="${xml_root}/core/src/"/>
                 <fileset dir="${nbroot}/core/external">
