--- a/xsl/build.xml
+++ b/xsl/build.xml
@@ -51,6 +51,7 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="Compiling XSL module classes..."/>
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>
+                <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
                 <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
                 <pathelement location="${nbroot}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
                 <pathelement location="${nbroot}/openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
