--- a/xml.text/src/org/netbeans/modules/xml/text/completion/Bundle.properties
+++ b/xml.text/src/org/netbeans/modules/xml/text/completion/Bundle.properties
@@ -21,4 +21,8 @@ MSG_loading_failed=Cannot load XML document grammar.
 
 MSG_loading_cancel=XML document grammar invalidated.
 
+##NodeSelector.java
+BK0001=<Cannot access the value>
+
+## ---
 
