minor language tweak in tool tip

--- a/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
+++ b/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
@@ -64,7 +64,7 @@ PROP_JavadocBase=Base Javadoc URL
 ERR_PortNumberOutOfRange={0} is not a valid port number.
 
 # JavadocServlet
-MSG_JavadocListingTitle=List of javadocs
+MSG_JavadocListingTitle=List of Javadoc mounts
 MSG_DirectoryListing=Directory listing:
 MSG_ParentDirectory=Parent directory
 
