Publishing openide/deprecated Javadoc. s/4.0/3.5/g in upgrade guide, and linking to new URLs.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -262,6 +262,7 @@ config.fixedmodules.javadoc=openide, \
         openide/compiler, \
         openide/execution, \
         openide/io, \
+        openide/deprecated, \
         ant, \
         core/javahelp, \
         core/naming, \
